# AI-assisted-Remainder

./: .gitignore  README.md
ai-backend/: main.py  requirements.txt
ai-backend/llm_inference/: .gitignore  pyproject.toml
ai-backend/llm_inference/src/llm_inference/: __init__.py  inference.py
ai-backend/llm_inference/src/llm_inference/configs/: configs.json  logging.conf
ai-backend/llm_inference/src/llm_inference/helper_functions/: __init__.py
ai-backend/llm_inference/src/llm_inference/prompts/: comparision.txt  extract_from_html.txt  extract_product_info.txt  extract_user_req.txt
backend/: app.js  package-lock.json  package.json  scrapper.js  search_results.json
backend/utils/: findProductCard.js  findSearchInput.js  sendmail.js
frontend/: .env  capacitor.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/API/: apiResponse.type.ts  axiosInstance.ts
frontend/src/components/: DataInputForm.tsx  Login.tsx  Logout.tsx  NofitificationFrequencyPicker.tsx  NotificatoinTimePicker.tsx
frontend/src/config/: index.ts
frontend/src/pages/: Home.tsx  HowToUse.tsx  MyRequests.tsx  Profile.tsx  WelcomePage.tsx
llm_inference/: .env
llm_inference/src/llm_inference/: inference.py
node-backend/: .env.sample  .gitignore  README.md  index.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
node-backend/public/: publicfile.json
node-backend/src/config/: env.ts
node-backend/src/middleware/: index.ts
node-backend/src/routes/: index.ts
node-backend/src/utils/: ApiResponse.ts  (+4 more)
(+35 files in other folders)
