[tool.poetry]
name = "hackathon-mlh"
version = "0.1.0"
description = ""
authors = ["Prashjeev Rai <prashjeevrai@gmail.com>"]
readme = "README.md"
packages = [{include = "hackathon_mlh", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
groq = "^0.11.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
